--- a/Czech/main/framework-ext-res.apk/res/values-cs-rCZ/strings.xml
+++ b/Czech/main/framework-ext-res.apk/res/values-cs-rCZ/strings.xml
@@ -170,4 +170,5 @@
   <string name="xspace_resolver_activity_title">Vybrat apl.</string>
   <string name="resolver_app_recommend_flag">Doporučené</string>
   <string name="security_permission_network_failed_text">Nelze se připojit k síti. Zkuste to znovu později.</string>
+  <string name="xspace_head">Klonovaná aplikace</string>
 </resources>
