--- a/Czech/main/InCallUI.apk/res/values-cs/strings.xml
+++ b/Czech/main/InCallUI.apk/res/values-cs/strings.xml
@@ -255,4 +255,5 @@
   <string name="waiting_close_airplane_mode">Čekání na ukončení režimu Letadlo...</string>
   <string name="conference_call_recorder_title">Konferenční hovor</string>
   <string name="volume_boost_text">Hlasitost je zesílena</string>
+    <string name="supp_service_notification_call_waiting">Na volaném čísle probíhá hovor...</string>
 </resources>
