--- a/Czech/main/Weather.apk/res/values-cs/strings.xml
+++ b/Czech/main/Weather.apk/res/values-cs/strings.xml
@@ -193,5 +193,6 @@ Zadejte město manuálně"</string>
   <string name="privacy_policy">Ochrana soukromí</string>
   <string name="user_agreement">Podmínky používání</string>
   <string name="content_desc_city_manage_del">Vymazat</string>
-  <string name="content_desc_city_manage_edit">Spravovat města</string>  
+  <string name="content_desc_city_manage_edit">Spravovat města</string> 
+  <string name="activity_main_pub_time">Zveřejněno %1$s</string> 
 </resources>
