--- a/Czech/main/MiuiHome.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiHome.apk/res/values-cs/strings.xml
@@ -330,4 +330,9 @@
   <string name="default_folder_title_services">Služby</string>
   <string name="open_personal_assistant_dialog_desc_international">Nebude možné využívat karty asistenta.</string>
   <string name="use_theme_screen_cells_title">Povolit změnu mřížky dle tématu</string>
+  <string name="announce_for_app_move_in_folder">Přesunutí na %1$d ve složce</string>
+  <string name="announce_for_create_folder_with_app">Vytvořena složka s %1$s</string>
+  <string name="announce_for_widget_span">Šířka %1$d, výška %2$d</string>
+  <string name="recommend_apps_no_data_toast">Žádné doporučení.</string>
+  <string name="recommend_xout">Znovu nezobrazovat</string>
 </resources>
