--- a/Czech/main/Updater.apk/res/values-cs/strings.xml
+++ b/Czech/main/Updater.apk/res/values-cs/strings.xml
@@ -57,4 +57,6 @@ Vaše data budou zachována."</string>
   <string name="version">Nainstalovaná verze</string>
   <string name="weekly">Týdenní</string>
   <string name="wifi_recommended">Připojte se na Wi-fi síť pro stažení aktualizace!</string>
+  <string name="channel_downloading">Průběh stahování</string>
+  <string name="channel_update">Dostupná nová verze MIUI</string>
 </resources>
