--- a/Czech/main/Weather.apk/res/values-cs/strings.xml
+++ b/Czech/main/Weather.apk/res/values-cs/strings.xml
@@ -194,5 +194,12 @@ Zadejte město manuálně"</string>
   <string name="user_agreement">Podmínky používání</string>
   <string name="content_desc_city_manage_del">Vymazat</string>
   <string name="content_desc_city_manage_edit">Spravovat města</string> 
-  <string name="activity_main_pub_time">Zveřejněno %1$s</string> 
+  <string name="activity_main_pub_time">Zveřejněno %1$s</string>
+  <string name="act_location_error_to_find_city">Nelze zjistit Vaši polohu. Můžete přidat město manuálně.</string>
+  <string name="empty_view_net_loading">Aktualizace...</string>
+  <string name="empty_view_net_unavailable">Nelze se připojit k síti</string>
+  <string name="empty_view_refresh">Zkusit znovu</string>
+  <string name="index_item_downloading">Stahování</string>
+  <string name="index_item_installing2">Instalace</string>
+  <string name="location_provider_btn_text">Povolte služby zjišťování polohy</string> 
 </resources>
