--- a/Czech/main/MiGalleryLockscreen.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiGalleryLockscreen.apk/res/values-cs/strings.xml
@@ -85,4 +85,113 @@
   <string name="idbct_opt_high_def_desc_text">Vždy stáhnout v HD kvalitě</string>
   <string name="idbct_opt_high_def_main_text">HD</string>
   <string name="idbct_title">Režim stahování</string>
+  <string name="add_cw_fail_tip">Nebolo možné pridať tapetu</string>
+  <string name="add_cw_success_tip">Pridané</string>
+  <string name="add_to_cw">Pridať do prezentácie</string>
+  <string name="add_to_trust_device">Toto je dôveryhodné zariadenie</string>
+  <string name="addcw_apply_btn_txt">Pridať tapetu</string>
+  <string name="and"> a </string>
+  <string name="back_icon_content_description">Späť</string>
+  <string name="bind_sign_in_title">Pripojiť k Mi účtu</string>
+  <string name="cancel_network">Ukončiť</string>
+  <string name="carousel_declaration_des2">Přidejte vlastní pozadí</string>
+   <string name="carousel_declaration_des_new">Získejte přizpůsobené doporučení a vyberte si z množství skvělých tapet.</string>
+   <string name="carousel_declaration_title_new">Skvělá pozadí na váš displej</string>
+   <string name="choose_to_signin">Ano</string>
+   <string name="choose_to_signup">Ne</string>
+   <string name="clear_search_edittext">Vyčistit</string>
+   <string name="create_shortcut">Vytvořit odkaz na ploše</string>
+   <string name="cw_add">Přidat</string>
+   <string name="cw_add2">Přidat (%1$d)</string>
+   <string name="cw_add_fail">Nelze přidat</string>
+   <string name="cw_add_num_tip">Nelze přidat více položek</string>
+   <string name="cw_add_success">Přidáno</string>
+   <string name="cw_add_tip_fail">Nelze přidat</string>
+   <string name="cw_add_wallpaper">Přidat tapetu</string>
+   <string name="cw_add_wallpaper_more_recomm">Více doporučení</string>
+   <string name="cw_added">Přidáno</string>
+   <string name="cw_added_fav_fail">Nelze načíst data</string>
+   <string name="cw_added_fav_no_pic">Žádné položky.</string>
+   <string name="cw_added_toast">Tato položka již byla přidána.</string>
+   <string name="cw_adding">Přidání (%1$d)</string>
+   <string name="cw_album_no_pic">Nebyly nalezeny žádné obrázky v zařízení</string>
+   <string name="cw_album_no_right">Povolte přístup ke galerii</string>
+   <string name="cw_all_folder">Nedávné obrázky</string>
+   <string name="cw_batch_all_added_tip">Nelze znovu přidat již přidané položky.</string>
+   <string name="cw_batch_part_tip_fail">Některé položky byly přidány</string>
+   <string name="cw_batch_part_tip_success">Přidáno</string>
+   <string name="cw_batch_tip_success">Přidáno</string>
+   <string name="cw_del_tip_fail">Nelze přidat</string>
+   <string name="cw_del_tip_success">Vymazáno</string>
+   <string name="cw_delete">Vymazat</string>
+   <string name="cw_delete2">Vymazat (%d)</string>
+   <string name="cw_deleting">Vymazat (%1$d/%2$d)</string>
+   <string name="cw_local_pic">Galerie</string>
+   <string name="cw_my_fav">Oblíbené</string>
+   <string name="cw_permission_tip">Povolte přístup k úložišti v Nastavení - Povolení.</string>
+   <string name="cw_wallpaper_empty_dlg_btn">Rozumím</string>
+   <string name="cw_wallpaper_empty_dlg_content">Nebyly přidány žádné položky do prezentace.</string>
+   <string name="cw_wallpaper_empty_dlg_title">Žádné položky</string>
+   <string name="cw_wallpaper_manager">Spravovat tapety</string>
+   <string name="deny_des">Denní tapeta vyžaduje přístup ke Galerii pro její správné fungování.</string>
+   <string name="detail_ad_type_video">Populární videa</string>
+   <string name="detail_add_cw">Přidat tapetu</string>
+   <string name="detail_add_shortcut_new">Vytvořit odkaz na ploše</string>
+   <string name="detail_menu_checkimg_apply">Použít</string>
+   <string name="detail_menu_checkimg_delete">Vymazat</string>
+   <string name="detail_menu_checkimg_favor">Přidat k oblíbeným</string>
+   <string name="detail_menu_history">Historie</string>
+   <string name="detail_menu_settingbtn_setting">Nastavení</string>
+   <string name="detail_menu_settingbtn_share">Sdílet</string>
+   <string name="dlg_cancel">Zrušit</string>
+   <string name="favor_list_no_data">Žádné položky.</string>
+   <string name="favor_list_title">Oblíbené</string>
+   <string name="favor_success">Přidáno do oblíbených</string>
+   <string name="find_psw">Zapomenuté heslo</string>
+   <string name="get_account_no_permission">Povolte Denní tapetě přístup k vašemu účtu.</string>
+   <string name="get_ph_ticket">Získat kód</string>
+   <string name="goto_sign_up">Vytvořit účet</string>
+   <string name="history_list_no_data">Žádné položky</string>
+   <string name="isornot_your_mi_account">Je toto váš Mi účet?</string>
+   <string name="lks_left_net_deny">Zakázaný přístup k internetu</string>
+   <string name="lks_left_net_error">Nelze se připojit k síti.</string>
+   <string name="lks_logo_desc2">Denně nové tapety</string>
+   <string name="lks_subscription_toast">Tapeta je změněna</string>
+   <string name="load_hdpicture_complete">Originální obrázek je načten</string>
+   <string name="mode_des">Denní tapeta zobrazuje doporučený obsah. Přepněte na prezentaci, pokud chcete zobrazit vlastní tapety.</string>
+   <string name="mode_ok">Přepnout na prezentaci</string>
+   <string name="mode_title">Zobrazená doporučení</string>
+   <string name="need_open_gallery">Povolit Denní tapetu</string>
+   <string name="nick_name">Jméno</string>
+   <string name="ok_enable_network_prov2">Souhlasím</string>
+   <string name="open_guid_des">Jděte do Nastavení &gt; Povolení &gt; Ostatní povolení &gt; Denní tapeta a povolte požadovaná povolení.</string>
+   <string name="save_picture_success">Uloženo</string>
+   <string name="scribe_btn_ok">Odebírat</string>
+   <string name="scribe_title1">Odebírat denní tapetu</string>
+   <string name="search_str">Populární</string>
+   <string name="setting_des">Můžete nastavit vlastní pozadí v Nastavení - Zámek displeje - Denní tapeta</string>
+   <string name="setting_ok">Nastavení</string>
+   <string name="setting_tip">Znovu nezobrazovat</string>
+   <string name="setting_title">Prezentace</string>
+   <string name="sns_sign_in">Jiný způsob přihlášení</string>
+   <string name="sst_auto_recommand_desc">Odebírejte tapety z vašich oblíbených kategorií.</string>
+   <string name="sst_auto_recommand_title">Získat doporučené tapety</string>
+   <string name="sst_change_wallpaper_desc">Vyberte, kde chcete použít tapetu</string>
+   <string name="sst_change_wallpaper_lock">Zámek displeje</string>
+   <string name="sst_change_wallpaper_lock_desk">Zámek displeje a plocha</string>
+   <string name="sst_change_wallpaper_title">Použít tapetu</string>
+   <string name="sst_close_wallpaper">Deaktivovat Denní tapetu</string>
+   <string name="sst_custom_wallpaper_desc">Vyberte obrázky z galerie</string>
+   <string name="sst_custom_wallpaper_title">Vlastní prezentace</string>
+   <string name="sst_custom_wallpaper_title2">Prezentace</string>
+   <string name="sst_feedback_title">Odezva</string>
+   <string name="sst_logo_desc">Denně nové tapety</string>
+   <string name="sst_mode_selection">Režim</string>
+   <string name="sst_more_subscription">Více kategorií</string>
+   <string name="sst_morning_greeting_desc">Získejte novou tapetu každé ráno</string>
+   <string name="sst_morning_greeting_title">Dostávat ranní pozdrav</string>
+   <string name="sst_new_feature">Nové funkce</string>
+   <string name="sst_sliding_checkbox_checked">Zap</string>
+   <string name="sst_sliding_checkbox_unchecked">Vyp</string>	 
+   <string name="sst_selected_tip">Současné</string>
 </resources>
