--- a/Czech/main/Settings.apk/res/values-cs/strings.xml
+++ b/Czech/main/Settings.apk/res/values-cs/strings.xml
@@ -5510,4 +5510,58 @@ Nastavení zařízení může vyžadovat přenos nemalého množství dat."</str
   <string name="device_description_resolution">Rozlišení</string>
   <string name="device_description_screen">Displej</string>
   <string name="turn_off_keyguard_password_with_face_confirm_msg">Po deaktivaci zámku obrazovky budou vymazána i data odemykání tváří.</string>
+       <string name="emergency_sos_title">Nouzové SOS</string>
+  <string name="miui_sos_audio_summary">Přehrát SOS zprávu po přijetí hovoru</string>
+  <string name="miui_sos_audio_title">SOS hlasová zpráva</string>
+  <string name="miui_sos_call_log_duration">Trvání</string>
+  <string name="miui_sos_call_log_none">Nemám historii hovorů za poslední hodinu.</string>
+  <string name="miui_sos_call_log_stranger">Neznámý</string>
+  <string name="miui_sos_call_log_summary">Odeslat historii hovorů za poslední hodinu nouzovému kontaktu</string>
+  <string name="miui_sos_call_log_time_unit">%1$dm %2$ds</string>
+  <string name="miui_sos_call_log_title">Odeslat historii hovorů</string>
+  <string name="miui_sos_call_warning_sim_unable">Žádný signál. Nelze odeslat SMM.</string>
+  <string name="miui_sos_calling_summary">Vaše zařízení automaticky zavolá vašemu nouzovému kontaktu a přehraje nouzovou hlasovou zprávu, kterou jste nahráli. Hovor se ukončí po přijetí zprávy.</string>
+  <string name="miui_sos_calling_title">Autom. hovor</string>
+  <string name="miui_sos_contacts_add">Nouzové kontakty</string>
+  <string name="miui_sos_contacts_category">Nouzové kontakty</string>
+  <string name="miui_sos_emergency_contacts">Nouzové kontakty</string>
+  <string name="miui_sos_emergency_contacts_quantity">%d přidáno</string>
+  <string name="miui_sos_emergency_delivered_sms" formatted="false">%1s (%2s) již akceptoval.</string>
+  <string name="miui_sos_emergency_delivered_sms_noname">%1s již akceptoval</string>
+  <string name="miui_sos_emergency_failed_sms" formatted="false">Nelze odeslat SMS %1s (%2s)."</string>
+  <string name="miui_sos_emergency_failed_sms_noname">Nelze odeslat SMS %1s.</string>
+  <string name="miui_sos_enable_switch_summary">Rychle stiskněte tlačítko zapínání 5x pro odeslání nouzové SOS SMS s vaší polohou nouzovým kontaktům.</string>
+  <string name="miui_sos_enable_switch_title">Nouzová SOS</string>
+  <string name="miui_sos_exit_dialog_cancel">Zrušit</string>
+  <string name="miui_sos_exit_dialog_message">Aktivovali jste Nouzové SOS. Vaše poloha byla odeslána vašim nouzovým kontaktům. Přesto vypnout?</string>
+  <string name="miui_sos_exit_dialog_ok">OK</string>
+  <string name="miui_sos_exit_dialog_title">Vypnutí Nouzové SOS</string>
+  <string name="miui_sos_green_guard_summary">Sdílet polohu v reálném čase</string>
+  <string name="miui_sos_green_guard_title">Rodičovská kontrola</string>
+  <string name="miui_sos_launch_error">Nelze aktivovat Nouzové SOS</string>
+  <string name="miui_sos_launch_error_confirm">Rozumím</string>
+  <string name="miui_sos_launch_error_message">Nelze se připojit k síti. Nelze použít Nouzové SOS.</string>
+  <string name="miui_sos_launching_summary">Aktivace Nouzového SOS v %ds</string>
+  <string name="miui_sos_launching_title">SOS</string>
+  <string name="miui_sos_menu_add">Přidat</string>
+  <string name="miui_sos_menu_edit">Upravit</string>
+  <string name="miui_sos_msg_call_log_prefix">Zde je má historie hovorů za poslední hodinu:</string>
+  <string name="miui_sos_play_voice">Přehrát SOS zprávu</string>
+  <string name="miui_sos_remind_add">Přidat</string>
+  <string name="miui_sos_remind_infocontent">Přidal jset si tě jako nouzový kontakt. V případě nouze dostanete SMS s mou aktuální polohou. [Mi Emergency SOS]</string>
+  <string name="miui_sos_remind_open">Nouzové SOS vyžaduje alespoň 1 nouzový kontakt.</string>
+  <string name="miui_sos_remind_sendinfo">Nezapomeňte povědět těmto kontaktům, že jste si je přidali jako nouzové kontakty.</string>
+  <string name="miui_sos_remind_sendnow">Odeslat</string>
+  <string name="miui_sos_remind_title">Upozornění</string>
+  <string name="miui_sos_settings_alert_contacts_repeat">Nelze přidat duplicitní kontakty.</string>
+  <string name="miui_sos_settings_alert_contacts_too_many">Můžete přidat max 3 kontakty.</string>
+  <string name="miui_sos_settings_category">SOS nastavení</string>
+  <string name="miui_sos_statusbar_summary">Dotykem deaktivujete</string>
+  <string name="miui_sos_statusbar_title">Nouzové SOS je aktivní</string>
+  <string name="sos_privacy_and_content_policy">Podmínkami používání</string>
+  <string name="sos_privacy_dialog_button_cancel">Zrušit</string>
+  <string name="sos_privacy_dialog_button_ok">Souhlasím</string>
+  <string name="sos_privacy_dialog_message">"Používáním této funkce souhlasíte s našimi %s. 
+Tato funkcia vyžaduje povolení pro přístup k vaší poloze, používání mobilních dat a přístup ke kontaktům. Souhlasíte?"</string>
+  <string name="sos_privacy_dialog_title">Podmínky používání</string>  
 </resources>
