--- a/Czech/main/MiuiHome.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiHome.apk/res/values-cs/strings.xml
@@ -339,4 +339,5 @@
   <string name="recommend_apps_no_data_toast">Žádná doporučení</string>
   <string name="recommend_refresh">Obnovit</string>
   <string name="recommend_xout">Znovu nezobrazovat</string>
+  <string name="double_tap_to_lock_title">Zamknout dvojitých poklepáním</string>
 </resources>
