--- a/Czech/main/MiuiSystemUI.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiSystemUI.apk/res/values-cs/strings.xml
@@ -1989,4 +1989,5 @@ Jakýkoli uživatel může aktualizovat aplikace všech ostatních uživatelů."
   <string name="aspect_ok">OK</string>
   <string name="aspect_title">Režim celé obrazovky</string>
   <string name="accessibility_aspect_button">Režim celé obrazovky</string>
+  <string name="gxzw_long_press_tip"/>
 </resources>
