--- a/Czech/main/Calendar.apk/res/values-cs/strings.xml
+++ b/Czech/main/Calendar.apk/res/values-cs/strings.xml
@@ -530,4 +530,5 @@
   <string name="yearly">Ročně (%s)</string>
   <string name="yearly_plain">Ročně</string>
   <string name="zhushen"/>
+  <string name="select_today_tip">Dnes</string>
 </resources>
